Update 47. Permutations II.java